hellosvc.yaml
apiVersion: v1
kind: Service
metadata:
 name: hello
 annotations:
   konghq.com/plugins: five-per-min
spec:
 selector:
   app: hello
 ports:
 - port: 80
   targetPort: 8080
