taskproducersvc.yaml
apiVersion: v1
kind: Service
metadata:
 name: taskproducer
 annotations:
   konghq.com/plugins: five-per-min
spec:
  type: NodePort
  selector:
    app: taskproducer
  ports:
  - port: 80
    targetPort: 5000
    nodePort: 31500
