taskproduceringress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: taskproducer-ingress
  annotations:
   kubernetes.io/ingress.class: kong
   konghq.com/strip-path: "true"
spec:
  rules:
  - http:
      paths:
      - path: /v1/tasks/task
        pathType: Prefix
        backend:
          service:
            name: taskproducer
            port:
              number: 80
